--- a/workspace/makefile
+++ b/workspace/makefile
@@ -1,1 +1,33 @@
 RUN curl -s http://getcomposer.org/installer | php
+
+# Install "PHP Extentions", "libraries", "Software's"
+RUN apt-get update && \
+    apt-get install -y --force-yes \
+        php7.0-cli \
+        php7.0-common \
+        php7.0-curl \
+        php7.0-json \
+        php7.0-xml \
+        php7.0-mbstring \
+        php7.0-mcrypt \
+        php7.0-mysql \
+        php7.0-pgsql \
+        php7.0-sqlite \
+        php7.0-sqlite3 \
+        php7.0-zip \
+        php7.0-memcached \
+        php7.0-gd \
+        php7.0-intl \
+        pkg-config \
+        libcurl4-openssl-dev \
+        libedit-dev \
+        libssl-dev \
+        libxml2-dev \
+        xz-utils \
+        libsqlite3-dev \
+        git \
+        curl \
+        vim \
+        nano \
+        postgresql-client \
+    && apt-get clean
