--- a/workspace/makefile
+++ b/workspace/makefile
@@ -11,7 +11,8 @@ RUN apt-get update && \
         php7.1-mbstring \
         php7.1-mcrypt \
         php7.1-mysql \
-        php7.1-pgsql 
+        php7.1-pgsql \
+        php7.1-redis \
         php7.1-zip \
         php7.1-gd \
         php7.1-intl \
