--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -2,6 +2,10 @@ user www-data;
 worker_processes 4;
 
 
-http {
-	
+server{
+	listen 80;
+
+	server_name test.com;
+
+    root /var/www/blog/public;
 }
