--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -8,4 +8,10 @@ server{
 	server_name test.com;
 
     root /var/www/blog/public;
+
+
+    location ~ /\.ht {
+    	allow 127.0.0.1;
+        deny all;
+    }
 }
