--- a/docker-composer.yml
+++ b/docker-composer.yml
@@ -37,7 +37,7 @@ services:
             - volumns_source
         volumns:
             - ./logs/nginx:/var/log/nginx
-            - ./nginx/sites:/etc/ngixn/sites-available
+            - ./docker/nginx/sites:/etc/nginx/sites-available
         ports:
             - "80:80"
             - "443:443"
